--- a/pages/p1/951968.md
+++ b/pages/p1/951968.md
@@ -1,4 +1,4 @@
-### 中共士兵亮关刀叫阵印方 扬言“中国武术文化的一部分” (图)
+### 又见宗教打压 秋雨圣约教会长老一家遭驱(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="中印边界 中国武术文化" src="https://img3.secretchina.com/pic/2020/9-10/p2773591a802148735-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="成都秋雨圣约教会李英强长老，10月间才刚搬到乐山，近日又遭到警方逼搬迁。" src="https://img3.secretchina.com/pic/2020/10-30/p2807201a601950783-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   中国士兵7日持长柄大砍刀、矛、棍棒，逼近位于湖南岸山脊线上的印度哨站，引起印方高度警惕。（图片来源：视频截图）
+   成都秋雨圣约教会李英强长老，10月间才刚搬到乐山，近日又遭到警方逼迁。（图片来源：自由亚洲电台）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,65 +21,57 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  秦鹏快评：钟南山到底是功臣还是罪人？李文亮缺席表彰大会，网民不满！](http://141.164.51.119:10000/videos/news/qp02.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月10日讯】中印边境争议再起，近日双方互控对方在拉达克地区（Ladakh）的中印实际控制线（LAC）越界，并开了自签订停火协议后45年来第一枪。日前中共军方手持大刀的集结画面在网络疯传，对此中方竟称携带近战武器是“
-  <span href="https://www.secretchina.com/news/gb/tag/中国武术文化" target="_blank">
-   中国武术文化
-  </span>
-  的一部分”。
+  【看中国2020年11月10日讯】（看中国记者卢乙欣综合报导）中国政府进行
+  <strong>
+   宗教迫害
+  </strong>
+  有日渐严重的趋势。11月6日下午，成都
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/秋雨圣约教会" target="_blank">
+    秋雨圣约教会
+   </span>
+   李英强
+  </strong>
+  长老披露他与家人在
+  <strong>
+   乐山
+  </strong>
+  再次遭到警方逼搬迁。在此之前，成都当局才刚于10月25日，派遣两部车子将李英强一家礼送至乐山。李英强表示，为了将来不会遭到乐山有关方面赶走，他们在到达乐山之前，就已经与该教会会友签下了两年的租房合同。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   中共军方：中国武术文化一部分
-  </strong>
+  对华援助协会11月6日报导，10月25日下午，
+  <span href="https://www.secretchina.com/news/gb/tag/李英强" target="_blank">
+   李英强
+  </span>
+  长老与妻子及两名孩子，在员警的护送之下被迫离开成都，搬迁到了乐山。他们在乐山时，是居住在教会会友廖强、任德君夫妇的房屋中。廖强一家于2018年12月9日遭遇教难后，就逃亡到了台湾申请政治避难。至于李英强为了不遭乐山当局赶走，在前往乐山之前，就先与廖强夫妇签订了两年的租房合同。
  </p>
  <p>
-  北京时间9月8日，中国西部战区司令部发言人张水利发声明称，印军7日非法越线进入中印边境西段班公错湖（Pangong Tso Lake）南岸神炮山地域，在行动中悍然对前往交涉的中国边防部队巡逻人员“鸣枪威胁”，中国边防部队被迫采取应对措施稳定局势。但印方回应，印军并没有越过“实际控制线”（LAC），也没有采取包括射击在内的侵略手段，并称中共军方的声明是在误导民众。
+  不过，当李英强抵达
+  <span href="https://www.secretchina.com/news/gb/tag/乐山" target="_blank">
+   乐山
+  </span>
+  刚满一周后，乐山警方随即上门骚扰。
  </p>
  <p>
-  随后，《近日印度》披露，9月7日晚间，中共军队试图接近热赞拉山（Rezang La）附近实控线沿线的一个印度前沿阵地。在这一过程中，中方士兵携带枪枝、棍棒、长矛和砍刀等武器。这是继6月中方士兵在加勒万河谷（Galwan Valley）使用“狼牙棒”后，再一次携带“野蛮武器”。
+  维权网11月7日发布由李英强撰写的文章，李英强在该文中叙述了在佛山的际遇，如下：
  </p>
  <p>
-  对此，印度在双方9日旅级指挥官级别的会晤中也提出抗议，质疑中共军方使用“野蛮武器”对付他们，但中方却表示，携带的近战武器“是中国武术文化的一部分”。
+  2020年10月25日，成都市有关方面将我们礼送到乐山（他们派了两辆车送我们，包括帮我们运送行李），我们住在廖强弟兄和任德君姊妹一家的房子里。为了将来不被乐山有关方面赶走，到乐山前，我们签了两年的租房合同——当然，任姊妹一家本来就没有打算要我们的房租。
  </p>
  <p>
-  这一言论引爆议论，许多网友对中共军方的言行匪夷所思。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有网友认为，“解放军一定是因为现代武器装备下的作战能力低下，才回归原始的！”也有网友表示，“我很怀疑这些人是不是中国的正规军。直觉告诉我，他们是被军队招募的雇佣兵。”还有网友说，“他们似乎没有装备防弹衣。他们的生命肯定不值得北京的重视。”
+  2020年11月3日下午6点左右，乐山公安（人民西路派出所）以登记居住人口资讯为名找到我住的地方，登记了我们一家四口的资讯。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,14 +86,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   中共5万人压境 边境或再爆冲突
-  </strong>
-  <br>
-   <br>
-    随着事件持续发酵、不少舆论批评中共挑衅行为，《环球时报》9日报导，印军也展开反制，在中印实际控制线（LAC）设置带刺铁丝网，警告中共军方勿轻易越界。
-   </br>
-  </br>
+  11月4日上午10点多，人民西路派出所曾警官连续打了多个电话来，确认我们的租房合同是如何签的。因为他们打电话联系不上房东，就转而要求我们提供房东的网络联系方式，我拒绝了。他表示会联系房东的家人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +101,7 @@
   </div>
  </center>
  <p>
-  不过，据印度媒体“Times Now News”9日报导，有消息人士称，中共军队已在中印实际控制线部署了约5万名士兵、重型坦克、大炮以及150架战机等，这是该区规模最大的军队。
+  11月6日上午，任德君姊妹的女儿任瑞婷姊妹告诉我，他们在乐山的家人已经屡次三番被骚扰了，员警说联系不到任德君姊妹，既然任德君姊妹的父母保管了钥匙，就是委讬管理人，要求他们出面把钥匙收回，把我们赶走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,7 +116,7 @@
   </div>
  </center>
  <p>
-  此外，西藏军区9月9日对外还公布了多型主战装备实弹射击演练短片。演练中，西藏军区某旅组织多型主战装备，在海拔4900多米的某区域展开多弹种实弹射击演练，炮弹精准命中目标。
+  11月6日中午，我打电话给派出所曾警官，把任德君姊妹的联系电话告诉了他，并且请求他们不要去骚扰任德君姊妹的家人，请他直接与任德君姊妹联系确认是否将房子租给我们。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -146,7 +131,7 @@
   </div>
  </center>
  <p>
-  新德里电视台网站报导，印度政府一名高级官员直言，目前中印之间的僵局“可以走向任何方向”，这表明不能排除双方会再次发生冲突。
+  文末，李英强请教会的兄弟姊妹们为他们一家、为廖强夫妇一家祷告。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,7 +146,22 @@
   </div>
  </center>
  <p>
-  印度《经济时报》则报导，中共军方近期多次试图占领战略要地，都被印度守军击败。印度已清楚地向中共官方传达了讯息，任何意图突破LAC的行为都会被视为敌对行为，印军将会予以反击。
+  中国当局除了重点打压成都秋雨圣约教会及其信徒之外，同样加大力度取缔宗教，并针对拒绝加入爱国会的天主教徒加剧恐吓及迫害。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  寒冬4日报导，山西省有一间拥有8名来自不同省份的修女的修女院，频频遭遇当地政府骚扰，据悉因那8名修女出过国，而被当局重点监控，其中包括在修女院周围安装四个监控摄像头。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,9 +180,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   双方无共识 近期冲突不断
-  </strong>
+  当局在8月起强令她们拆毁修女院的十字架及宗教塑像，这让修女们痛苦难耐。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +195,7 @@
   </div>
  </center>
  <p>
-  事实上，中印双方自上月底以来，几乎每日都有旅级的指挥官会晤，由于谈判无突破，各方已达成共识，举行一次军级司令的会晤。但具体日期尚未确定。
+  一名修女痛苦表示，“十字架是救恩标记，亲手拆下十字架就像割自己的肉一样难受”。要不拆，就怕他们会拆了修道院。修女表示，“政府人员说我们是危险分子，三番五次骚扰我们。”当局让她们写下简历，例如从什么时间进入幼儿园，并追问她们最近这几个月做过什么，甚至还让她们说出外出坐的车的车牌号。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -212,11 +210,7 @@
   </div>
  </center>
  <p>
-  自5月开始
-  <span href="https://www.secretchina.com/news/gb/tag/中印边界" target="_blank">
-   中印边界
-  </span>
-  冲突升温。 6月15日，双方曾在边境东拉达克加勒万谷（Galwan Valley）爆发流血冲突，造成印度方面20名官兵死亡，但中方迄今不敢公布究竟有多少中国官兵死伤。外传中方有超过40人伤亡。
+  这名修女又愤怒表示，“政府调了3人来监视我们，其中一个是警察，另两个是地方政府人员，他们经常闯进修女院，打探我们的情况，有时甚至在半夜。”政府还雇用地痞、流氓骚扰她们，“有的人胳膊上有纹身，我们在厨房做饭，他们就进来随便乱翻，还色眯眯地引诱我们出去吃饭。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,22 +225,7 @@
   </div>
  </center>
  <p>
-  8月31日，印度国防部披露，中方于8月29日、30日两天违反双方共识，在拉达克地区班公错湖南岸进入印度管辖地带，进行“挑衅的军事行动”、“企图改变现状”，最终印军阻止了中共士兵进犯。对此中方承认武装冲突受挫，但拒绝公布细节。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另据来自央媒的内部人员透露，官方下令对中印边境冲突只能报导外交部和军方发布的消息，具体细节不让讨论。
+  目前已有一名修女因受不了骚扰、惊吓，晚上睡不着觉，精神几近崩溃。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -278,7 +257,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -310,13 +289,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945734.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945734.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/945734.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/10/945734.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/951968.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/951968.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/951968.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/10/951968.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/945734.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/951968.md' width='0px' height='0px'/>
