--- a/pages/nsc413/n12535884.md
+++ b/pages/nsc413/n12535884.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.9】川普：内华达是虚假选票的藏污地" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229158819-600x400.jpg"/>
+<div><img alt="【大选更新11.9】调查记者：考验人类灵魂的时刻" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1204060945-600x400.jpg"/>
 <div class="caption">
- 川普总统周一（11月9日）表示内华达是虚假选票的藏污地。图为2020年10月18日，川普总统在内华达州卡森城的竞选集会上发表演讲。（Stephen Lam/Getty Images）
+ 马里兰州国家港口：美国保守派政治活动家、独立调查记者以及Project Veritas创始人詹姆斯·奥基夫（James O'Keefe）表示现在是考验人类灵魂的时刻。图为奥基夫于2020年2月28日，在美国保守联盟主办的2020年保守党政治行动会议（CPAC）期间会见支持者 。（Samuel Corum / Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
