--- a/pages/p8/951629.md
+++ b/pages/p8/951629.md
@@ -1,4 +1,4 @@
-### 几种祸害女性的“迷药” 该如何预防？(图)
+### 树欲静而风不止：2个“母亲”的故事(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="迷药 麻醉 安眠 预防" src="https://img3.secretchina.com/pic/2020/7-6/p2726582a340237162-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="母亲 结婚 媳妇 继母" src="https://img3.secretchina.com/pic/2020/11-10/p2814682a31580470-ss.jpg"/>
   <br>
-   几种祸害女性的“
+   世界上再难找到比
    <strong>
-    迷药
+    母亲
    </strong>
-   ”，该如何预防？（图片来源：Adobestock）
+   更柔软慈爱的心了。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,222 +25,181 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  前些日子，网络流传有司机通过“香水”喷晕女乘客。虽然很快被警方证实是司机自导自演，但“
-  <span href="https://www.secretchina.com/news/gb/tag/迷药" target="_blank">
-   迷药
+  世界上再难找到比
+  <span href="https://www.secretchina.com/news/gb/tag/母亲" target="_blank">
+   母亲
   </span>
-  ”这种东西的存在，还是引起许多女性的恐慌。
+  更柔软慈爱的心了……
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  到底“迷药”存不存在？是否真的一喷就失去意识？它的本质又是什么呢？
- </p>
- <p>
-  在解释之前，先让大家知道，那种闻一下就马上失去意识，乖乖任人摆布的迷药是不存在的。否则只要警察稍微运用，就能知道嫌犯作案动机，也不必辛苦审问了。
- </p>
- <p>
-  当然对这些药，市面上也有不法人士在贩售，并把药效吹上天，但这些药，大多属于
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/麻醉" target="_blank">
-    麻醉
+   （一）一个药剂师的故事
+  </strong>
+ </p>
+ <p>
+  她是一个药剂师，更是一个不幸的女人，刚刚
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/结婚" target="_blank">
+    结婚
    </span>
   </strong>
-  及
+  不久，丈夫却因意外身故，她想追随而去，才发现自己肚子里有了丈夫的骨肉。她对自己说，自己没有权利不让孩子来到这个世界，所以她生下了孩子。本来想和孩子一起追随丈夫而去，但是看到孩子粉色的小脸，她决定不论多么艰难也要培养儿子长大成年。
+ </p>
+ <p>
+  她一边上班，一边挂念着在家的儿子，终于有一天，因为她的注意力不集中，拿错药给患者，险些造成医疗事故，她也因此被单位开除了。
+ </p>
+ <p>
+  之后为了儿子，她什么最苦最累的活也会去做。儿子长大了，她给儿子说上了
   <strong>
-   安眠
-  </strong>
-  类的药物。虽然不能让人马上失去意识，却可能在短时间内失去意识。而根据统计，常见的迷药，主要以下面三种为代表：
- </p>
- <p>
-  <strong>
-   1、三唑仑
-  </strong>
- </p>
- <p>
-  三唑仑就是人们常说的迷药，也是许多戏剧里“蒙汗药”的原型，它属于一种苯二氮卓类镇静
-  <span href="https://www.secretchina.com/news/gb/tag/安眠" target="_blank">
-   安眠
-  </span>
-  药。原本的用途在于治疗失眠、焦虑，能迅速镇静、催眠，是属于严格管制的精神类药物。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  本药可怕的地方，在于没有任何味道，能溶于各种酒水饮料中。喝下后短短几分钟，药效就会发作，使人迅速出现疲倦、头晕、步态不稳等症状。昏迷时间可长达昏迷时间能长达4～6个小时，药效是普通安眠药的45～100倍之多。过量服用，甚至会产生生命危险。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   ２、氟硝西泮
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  氟硝西泮和三唑仑一样，都属于苯二氮卓类镇静安眠药。本药除了有催眠效果外，还具有肌肉松弛、抗惊厥等作用。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而比起三唑仑，氟硝西泮的催眠作用更强，能持续5~7个小时。更可怕的是，它的药效之强，甚至会让受害者事后失去记忆。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   3、γ-羟基丁酸
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  γ-羟基丁酸也叫GHB。它和前面两者不同，属于一种中枢神经系统抑制剂，在临床上主要是作为麻醉剂（但若用于其他地方，就属于毒品）。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  γ-羟基丁酸同样能快速溶于水中。一旦喝下，短短几分钟就能让人头脑昏沉，失去抵抗力。不少犯罪者更是利用这种药物的特性，将γ-羟基丁酸混合其他“软性毒品”给受害者服用。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这种药的特性在于受害者虽然尚未昏迷，却也无力抵抗，只能任人摆布。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  总之，目前市面上那种所谓的闻、喷、拍一下就让人失去意识的迷药是不存在的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   ●
-   <span href="https://www.secretchina.com/news/gb/tag/预防" target="_blank">
-    预防
+   <span href="https://www.secretchina.com/news/gb/tag/媳妇" target="_blank">
+    媳妇
    </span>
-   之道
   </strong>
+  。她就像一盏耗尽自己的灯，多年的辛苦让她日夜咳不停，媳妇开始给她脸色看，并鼓动其儿子把她轰出去。为了不使儿子为难，她去给人家做保姆，这样就可以搬出去了。
+ </p>
+ <p>
+  时间久了，她的身体越来越差，工是做不了了，只好又回到儿子家。但每个月的药费，也让只是普通人的儿子有些为难。终于有一天，儿子为她熬好了药出了门，回来的时候却发现她割手腕自杀了，桌子上有洗得十分干净的那只盛药的碗，还有一封信写给儿子的信：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “儿啊，你忘记你妈以前是做什么的了，如果我喝了你的药，派出所就会找到你。药我倒了，碗也刷干净了，我明白你的意思，你以后要好好的。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  儿子看过当场晕了过去……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   （二）一个关于
+   <span href="https://www.secretchina.com/news/gb/tag/继母" target="_blank">
+    继母
+   </span>
+   的故事
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  天底下一提继母，好多人会恨的牙痒痒的。是呀，千百年来，继母狠毒的形象早已深入人心，小白菜等故事不就是因继母而引的的吗？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="母亲的爱是伟大的。" src="https://img3.secretchina.com/pic/2020/11-6/p2812252a758525708-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   母亲的爱是伟大的。（图片来源：Adobe stock)
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但今天要讲的是一个特别慈爱的继母，她带着自己的亲闺女，嫁给了有两个儿子的男人，从此这个小脚女人走进一个穷困的家。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  两个儿子对她一直十分有敌意，故意将自己亲生母亲的照片挂在家里向她示威，丈夫看不下去，要制止自己儿子的行为，她给拦下：“让孩子们挂吧，让他们有个念想。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  两个儿子不喜欢上学，成天逃课，她常常被老师叫到学校，她总是那么卑微的看着老师，大气也不敢出，儿子守着老师对她大声吼：“她不是我们的妈妈，我们的妈妈死了！”只留下尴尬的她。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -259,7 +218,7 @@
   </ins>
  </center>
  <p>
-  那么对女性而言，又该如何预防这种高度危险却又难以察觉的药品呢？
+  她亲生闺女17岁那年，为了给家里省一口粮食，她狠心的将自己只有17岁的女儿远嫁到内蒙古，就在她送女儿上火车的那一天，站台上向自己女儿挥手的她，手是那样的干枯……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -274,7 +233,7 @@
   </div>
  </center>
  <p>
-  1、如果可以，尽量不要去酒吧、夜店这种混杂的环境。
+  儿子实在忍不住了，在后面对她喊“妈妈”，她惊异的回头看两个儿子，儿子们再次大声的喊“妈妈”，她一瞬间哭的不能自己。这些年来的付出，儿子终于叫了她第一声“妈妈”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -289,7 +248,7 @@
   </div>
  </center>
  <p>
-  2、就算要去，也不要在深夜去，更不要独自一个人前往，最好携伴同行。
+  两个儿子从此很争气，前后都考上了大学，就在儿子们终于有机会可以报答她的时候，她却突然走了，走得是那样的安详，就像只是要出一趟远门。而家里给儿子们的衣服早已洗好叠好缝补好，还蒸了一大锅的馒头要让儿子吃。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -304,7 +263,7 @@
   </div>
  </center>
  <p>
-  3、自备饮料，不随便接受陌生人递过来的饮料与食品。
+  她是个目不识丁的小脚女人，但她却培养了两个上大学的儿子，她像蜡烛一样，照亮了两个儿子的前程，而她自己却熄灭了.
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -319,7 +278,7 @@
   </div>
  </center>
  <p>
-  4、注意自己的杯子，如果里面的饮料没喝完，却又要上厕所的话，那么回来就不要再喝了。
+  这两个真实故事，时间过于久远，好多的细节都记不得了。但不变的是，这两位伟大母亲的爱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -334,7 +293,7 @@
   </div>
  </center>
  <p>
-  5、就算跟对方再熟，也要有警戒心，不要完全松懈。
+  世界上再难找到比母亲更柔软慈爱的心了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -348,8 +307,27 @@
    </center>
   </div>
  </center>
- <p>
-  另外，如果自己不幸碰到了，那么一定要赶快报警，把对方证据保留下来，同时去医院验伤检查。否则息事宁人的结果，只会让对方食髓知道，继续加害其他女性。
+ <p style="margin-bottom:12px;">
+  <hr style="border-top: 1px dashed  ;" width="100%"/>
+  <br/>
+  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ：每位
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+  <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -364,7 +342,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -379,13 +357,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938746.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938746.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938746.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/06/938746.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951629.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951629.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951629.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/10/951629.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/938746.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/951629.md' width='0px' height='0px'/>
